RESOLVED FIXED76203
[chromium] Fix DC leak in WebScreenInfoFactory.
https://bugs.webkit.org/show_bug.cgi?id=76203
Summary [chromium] Fix DC leak in WebScreenInfoFactory.
David Levin
Reported 2012-01-12 12:46:13 PST
See summary.
Attachments
Patch (7.20 KB, patch)
2012-01-12 14:55 PST, David Levin
no flags
Patch (6.34 KB, patch)
2012-01-12 15:10 PST, David Levin
dimich: review+
David Levin
Comment 1 2012-01-12 14:55:15 PST
Dmitry Titov
Comment 2 2012-01-12 15:05:55 PST
Comment on attachment 122315 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=122315&action=review Chromium will live! One note: > Source/JavaScriptCore/JavaScriptCore.gyp/JavaScriptCore.gyp:176 > + ['include', 'win/OwnPtrWin\\.cpp$'], Could we only have changes directly related to the DC fix? It would be easier to understand the patch. > Source/JavaScriptCore/wtf/OwnPtrCommon.h:31 > +#if OS(WIN) Same as above.
David Levin
Comment 3 2012-01-12 15:10:31 PST
David Levin
Comment 4 2012-01-12 15:34:55 PST
Note You need to log in before you can comment on or make changes to this bug.