[chromium] Fix DC leak in WebScreenInfoFactory. https://bugs.webkit.org/show_bug.cgi?id=76203

Reviewed by Dmitry Titov.

Source/JavaScriptCore:

* JavaScriptCore.gyp/JavaScriptCore.gyp: Added OwnGetDCWin.h
* JavaScriptCore.gypi: Added OwnGetDCWin.h
* JavaScriptCore/wtf/win/OwnGetDCWin.h: Made an owner class for GetDC which needs ReleaseDC as opposed to DeleteDC.

Source/WebKit/chromium:

* src/win/WebScreenInfoFactory.cpp:
(WebKit::WebScreenInfoFactory::screenInfo): Use OwnGetDC to ensure its release.

Canonical link: https://commits.webkit.org/93026@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@104867 268f45cc-cd09-0410-ab3c-d52691b4dbfc